<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/reportUserException"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reportuserexception" />

    <Button
        android:id="@+id/uploadLogFile"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/uploadlogfile" />

    <Button
        android:id="@+id/uploadMultiLogFile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/uploadmultilogfile" />

    <Button
        android:id="@+id/checkupdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkupdate" />

    <Button
        android:id="@+id/updateipandport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/updateipandport" />
</LinearLayout>